tests/fixtures/invalid/round_int_bytes.py
# Cannot call round() with Int, Bytes
x = round(1, b"hello")
